tests/fixtures/invalid/oct_str.py
# Cannot call oct() with Str
x = oct("hello")
